LPS-81874 fixed overlapping text

--- a/modules/apps/frontend-theme/frontend-theme-admin/src/css/components/_group-item.scss
+++ b/modules/apps/frontend-theme/frontend-theme-admin/src/css/components/_group-item.scss
@@ -15,7 +15,7 @@
 .list-group-card-item {
 	display: block;
 	float: left;
-	margin-buttom: 8px;
+	margin-bottom: 8px;
 	margin-top: 32px;
 	position: relative;
 	text-align: center;
@@ -40,6 +40,8 @@
 		color: $secondary;
 		display: block;
 		margin-top: 16px;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	.lexicon-icon {
